<resources>
    <string name="app_name">MyBeer</string>
    <string name="search_beer">Ricerca birra</string>
    <string name="search_beer_via_map">Ricerca birra tramite mappa</string>
    <string name="photo_mode">Fai foto ad una birra</string>
    <string name="beer_name">Nome della birra</string>
    <string name="beer_style">Genere della birra</string>
    <string name="beer_brewery">Birrificio</string>
    <string name="beer_abv">Percentuale abv</string>
    <string name="beer_desc">descrizione</string>
    <string name="beer_image">immagine birra</string>
    <string name="login_button">Login</string>
    <string name="search_beer_category">Ricerca tramite categoria</string>
    <string name="search_beer_name">Ricerca tramite nome</string>
    <string name="vetrina">Vetrina</string>
    <string name="login">Login</string>
    <string name="report_beer">Report beer</string>
    <string name="search_maps">Search breweries</string>
    <string name="beer_add_to_fav">Aggiungi ai preferiti</string>
    <string name="beer_see_details">Vedi dettagli</string>
    <string name="beer_create_report">Report</string>
    <string name="remove_beer_from_fav">Rimuovi dai preferiti</string>
    <string name="beer_raters">Ratings</string>
    <string name="beer_ibu">Ibu</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="brewery">Birrificio</string>
</resources>