<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp">
    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/beer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/grey800"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_picture"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:contentDescription="@string/beer_image" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvBeerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/beer_name"
                    android:background="@color/grey900"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvBeerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/beer_style"
                    android:background="@color/grey900"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="normal"/>
                <TextView
                    android:id="@+id/tvBeerBrewery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/beer_brewery"
                    android:background="@color/grey900"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="normal"/>
                <TextView
                    android:id="@+id/tvBeerAbv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/beer_abv"
                    android:background="@color/grey900"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="normal"/>
                <TextView
                    android:id="@+id/tvBeerDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/beer_desc"
                    android:background="@color/grey900"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="normal"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>