<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/beer_add_rating"
    android:layout_marginHorizontal="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/beer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/grey800"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_picture"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/beer_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvBeerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/beer_name"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:padding="8dp"
                        android:background="@color/grey900"/>

                    <TextView
                        android:id="@+id/tvBeerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/beer_style"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:padding="8dp"
                        android:background="@color/grey900"/>

                    <TextView
                        android:id="@+id/tvBeerBrewery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/beer_brewery"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:padding="8dp"
                        android:background="@color/grey900"/>

                    <TextView
                        android:id="@+id/tvBeerAbv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/beer_abv"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:padding="8dp"
                        android:background="@color/grey900"/>

                    <TextView
                        android:id="@+id/tvBeerDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/beer_desc"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:padding="8dp"
                        android:background="@color/grey900"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_drunk_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bevuta il giorno:"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/btn_drunk_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Date"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Luogo"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/et_drinking_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Inserisci il luogo"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/ll_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <!-- Star Rating Views -->
                <ImageView
                    android:id="@+id/star_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border"
                    android:contentDescription="Star 1"
                    android:layout_marginEnd="4dp"/>

                <ImageView
                    android:id="@+id/star_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border"
                    android:contentDescription="Star 2"
                    android:layout_marginEnd="4dp"/>

                <ImageView
                    android:id="@+id/star_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border"
                    android:contentDescription="Star 3"
                    android:layout_marginEnd="4dp"/>

                <ImageView
                    android:id="@+id/star_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border"
                    android:contentDescription="Star 4"
                    android:layout_marginEnd="4dp"/>

                <ImageView
                    android:id="@+id/star_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border"
                    android:contentDescription="Star 5"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Submit Rating" />

            <ImageView
                android:id="@+id/iv_beer_picture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/photo_image"
                android:scaleType="centerCrop"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/purple"
        android:contentDescription="TODO"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Button" />

</LinearLayout>